style contact page and add description to projects table

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.move-header-down.in {
+  margin-top: 50px;
+}
 
 .square-profile-image {
   background-repeat: no-repeat;
