--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,4 +1,66 @@
-<body id="home">
+<section id="services" class="add-padding">
+    
+      <div class="container">
+        
+        <h1 class="section-title big-text scrollimation fade-up move-header-down">Contact Us</h1>
+        
+        <div class="row">
+        
+          <div class="col-sm-4 service-item color3 scrollimation scale-in">
+            <%= link_to '#' do %>
+              <div class="service-icon"><i class="fa"> <%= image_tag('sarahprofile.jpg', :class => 'round-profile-image') %></i></div>
+            <% end %>
+            <h3>Sarah Stroh</h3>
+            
+            <p>
+              <ul class="social-links">
+                  <li><a href="https://github.com/strohy1210"><i class="fa fa-github fa-fw"></i></a></li>
+                  <li><a href="http://linkedin.com/pub/sarah-stroh/11/410/34a"><i class="fa fa-linkedin fa-fw"></i></a></li>
+              </ul>
+            </p>
+            
+            
+          </div>
+        
+          <div class="col-sm-4 service-item color1 scrollimation scale-in d1">
+          <%= link_to "#" do %>
+            <div class="service-icon"><i class="fa"><%= image_tag('joeprofile.jpg', :class => 'round-profile-image') %></i></div>
+          <% end %>  
+            <h3>Joe Cardarelli</h3>
+            
+            <p>
+              <ul class="social-links">
+                  <li><a href="http://github.com/joejohnrobert"><i class="fa fa-github fa-fw"></i></a></li>
+                  <li><a href='http://linkedin.com/pub/joseph-cardarelli/9/675/821'><i class="fa fa-linkedin fa-fw"></i></a></li>
+              </ul>
+            </p>
+            
+            
+          </div>
+          
+          <div class="col-sm-4 service-item color2 scrollimation scale-in d2">
+          <%= link_to 'http://linkedin.com/in/kevinhylant/' do %>
+            <div class="service-icon"><i class="fa "> <%= image_tag('kevinprofile.jpg', :class => 'round-profile-image') %></i></div>
+          <% end %>  
+            
+            <h3>Kevin Hylant</h3>
+            
+            <p>
+              <ul class="social-links">
+                  <li><a href="http://twitter.com/kevinhylant"><i class="fa fa-twitter fa-fw"></i></a></li>
+                  <li><a href="https://plus.google.com/+KevinHylant/about"><i class="fa fa-google-plus fa-fw"></i></a></li>
+              </ul>
+            </p>
+            
+          </div>
+          
+        </div>
+        
+      </div>
+    
+    </section>
+
+<!-- 
 <div class="container-fluid title">
   <div class="row">
     <div class="col-sm-12">
@@ -61,6 +123,6 @@
 </div>
 
 <br><br><br><br><br><br><br><br><br><br><br>
-  
+   -->
 <!-- </div> -->
-</body>
+
