--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -7,7 +7,7 @@
         <div class="row">
         
           <div class="col-sm-4 service-item color3 scrollimation scale-in">
-            <%= link_to '#' do %>
+            <%= link_to 'http://linkedin.com/pub/sarah-stroh/11/410/34a' do %>
               <div class="service-icon"><i class="fa"> <%= image_tag('sarahprofile.jpg', :class => 'round-profile-image') %></i></div>
             <% end %>
             <h3>Sarah Stroh</h3>
@@ -23,7 +23,7 @@
           </div>
         
           <div class="col-sm-4 service-item color1 scrollimation scale-in d1">
-          <%= link_to "#" do %>
+          <%= link_to "https://www.linkedin.com/pub/joseph-cardarelli/9/675/821" do %>
             <div class="service-icon"><i class="fa"><%= image_tag('joeprofile.jpg', :class => 'round-profile-image') %></i></div>
           <% end %>  
             <h3>Joe Cardarelli</h3>
