setup wireframes on user show

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -9,3 +9,15 @@
 .proj-hover{
   color: #509B9E;
 }
+
+.project-tile {
+  height: 250px;
+  width: 400px;
+  background-color:#52CCBA;
+}
+
+.tile-header{
+  height: 40px;
+  width: 100%;
+  background-color: red; 
+}
