--- a/app/views/projects/update.js.erb
+++ b/app/views/projects/update.js.erb
@@ -1,3 +1,10 @@
+
+<% if @check != nil %>
+
 $('h3[data-id=<%= @project.id %>]').find('.fa').toggleClass('selected');
 
+<% end %>
 
+$('#basicModal-<%= @project.id %>').modal('hide')
+
+$('[data-id=<%= @project.id %>]').children('p').text('<%= @project.description %>')
