got view to show correctly

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,8 +46,7 @@
   <%= project.need_help_with %>
                   </div>
                   <%end%>
-                  <a href="#" class="btn btn-sm btn-success"
-   data-toggle="modal"
+                  <a href="#" class="btn btn-sm btn-success modal-btn" data-toggle="modal"
    data-target="#basicModal-<%= project.id %>" >Edit project description</a>
 
               <div class="modal fade" id="basicModal-<%= project.id %>" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
