--- a/app/assets/stylesheets/styles-8.css.scss
+++ b/app/assets/stylesheets/styles-8.css.scss
@@ -558,7 +558,8 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     display:block;
     position:relative;
     margin:0;
-    width:370px;
+    width: 366px;
+    height: 366px;
     margin-bottom:25px;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -601,7 +602,6 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     transition:transform 4s linear;
 }
 
-
 .project-item .hover-mask {
     position:absolute;
     padding:0;
@@ -616,6 +616,26 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     transition:all 0.3s ease-out;
 }
 
+.bottom-mask {
+    position:absolute !important;
+    width: 97% !important;
+    bottom:0px !important;
+    vertical-align: !important; 
+    background:#222222 !important;
+    height: 12% !important;
+    margin-bottom: 6px !important;
+    margin-left: 6px !important;
+    margin-right: auto !important;
+    margin-top: 86.5% !important;
+}
+
+.bottom-mask:hover {
+    opacity:1;
+    border-style:solid;
+    border-width:3px;
+    border-color:#FFF;
+}
+
 .project-item:hover .hover-mask {
     opacity: .95;
     filter:alpha(opacity=95);
@@ -625,7 +645,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     color:#fff;
     margin-top:36%;
     padding:10px;
-    font-size:26px;
+    font-size:27px;
     line-height:34px;
     font-weight:400;
     text-align:center;
@@ -636,6 +656,21 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     transition:all 0.5s ease-out;
 }
 
+.project-tile-header {
+    margin-top:25px !important;  
+    padding:0px !important;
+}
+.project-description-header {
+    margin-top:25px !important;
+    padding:0px !important;
+    margin-bottom:6px !important;
+}
+.project-description-footer {
+    margin-top:8px !important;
+    padding:0px !important;
+    font-size: 20px !important;
+}
+
 .project-item:hover .hover-mask .project-title {
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -644,9 +679,10 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 
 .project-item .hover-mask p {
     margin:0;
-    font-size:16px;
+    font-size:24px;
     line-height:24px;
     font-weight:400;
+    color: #334959;
     text-transform:uppercase;
     text-align:center;
     opacity: 0;
@@ -656,6 +692,38 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     transition:all 0.3s ease-out 0s;
 }
 
+.project-description {
+    padding-left: 25px;
+    padding-right: 25px;
+    line-height: 15px !important;
+}
+.project-description-header{
+    margin-top: 25px !important;
+    text-align: center !important;
+    line-height: 20px !important;
+    font-size: 20px !important;
+}
+.overview {
+    text-transform:none !important;
+    font-size:20px !important;
+    text-align:justify !important;  
+    line-height: 22px !important;  
+}
+.project-languages {
+    text-transform:none !important;
+    font-size:20px !important;
+    text-align:center !important;  
+    line-height: 20px !important;
+}
+.need-help {
+    text-transform:none !important;
+    font-weight:bold !important;
+    font-size:20px !important;
+    text-align:center !important;  
+    line-height: 20px !important;
+}
+
+
 .project-item:hover .hover-mask p {
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -663,6 +731,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     -webkit-transition:all 0.3s ease-out .2s;
     transition:all 0.3s ease-out .2s;
 }
+
 
 .masonry,
 .masonry .masonry-brick {
@@ -1243,10 +1312,6 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
         margin-bottom: 20px;
     }
     
-    .project-item .hover-mask .project-title {
-        /*margin-top:75px;*/
-    }
-    
     #project-slider{
         min-height:0;
     }
@@ -1403,5 +1468,8 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     
     .project-item .hover-mask .project-title {
         margin-top:70px;
+    }
+    .project-item .hover-mask .project-title {
+        margin-top:30px;
     }
 } 
