--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,11 +19,26 @@
   color: #334959;  
 }
 
-
 .masonry-images-margin{
   /*width: 83%;*/
   margin: auto;
 }
+
+.nav-thumbnail{
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  border: 2px solid #000;
+  -webkit-transition:all 0.5s ease-out;
+  transition:all 0.5s ease-out;
+}
+.nav-thumbnail:hover{
+  opacity: .70;
+  }
 
 /* ------------------------------ fonts -------------------------- */
 @font-face {
