--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,11 @@
         <li><%= link_to "CONTACT", contact_path()%></li>
         <% if logged_in? %>
           <li><%= link_to "YOUR PROFILE", user_path(current_user) %></li>
-          <li><%= link_to "LOGGED IN AS #{current_user.first_name.upcase}", "#" %></li>
           <li><%= link_to 'LOG OUT', logout_path %></li>
+          <li>
+            <%= link_to(image_tag(current_user.image_path, class: "nav-thumbnail"), user_path(current_user))%>
+          </li>
+      
         <% else %>
           <li><%= link_to "SIGN UP", "/auth/github" %></li>
           <li><%= link_to "LOG IN", "/auth/github" %></li>
