--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                          <%= f.submit "Save Changes" %>
+                          <%= f.submit "Save Changes", class: "btn btn-success"  %>
                           <%end%>
                         </div>
                      </div>
