--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,6 +4,8 @@
 
 .user-pic{
   padding-top: 50px;
+  width: 45%;
+  /*padding-right: 20px;*/
 }
 
 .proj-hover{
@@ -21,3 +23,35 @@
   width: 100%;
   background-color: red; 
 }
+
+.email-button {
+  font-size: 29px;
+}
+
+.yelp-info{
+  height: 345px;
+  /*width: 400px;*/
+  background-color:grey;
+}
+
+.yelp-image {
+  height: 100px;
+  width: 100px;
+  text-align: right;
+}
+
+
+.col-sm-6.scrollimation.fade-left.d3.in{
+  margin-left: 50px;
+}
+  
+          
+          
+          
+          
+          
+          
+          
+          
+          
+    
