--- a/app/assets/stylesheets/styles-8.css.scss
+++ b/app/assets/stylesheets/styles-8.css.scss
@@ -706,7 +706,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 .overview {
     text-transform:none !important;
     font-size:20px !important;
-    text-align:justify !important;  
+    text-align: center !important;  
     line-height: 22px !important;  
 }
 .project-languages {
