--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,11 @@
         <img class="img-responsive polaroid" src="<%= @user.image_path %>" alt="" />
       </div>  
       <div class="col-sm-6 scrollimation fade-left d3">
-        <h1 class='big-text' data-latitude='<%= @user.latitude %>' data-longitude='<%= @user.longitude %>'><%= @full_name %></h1>
+        <% if current_user %>
+          <h1 class='big-text' data-latitude='<%= @user.latitude %>' data-longitude='<%= @user.longitude %>' data-user='<%= @user.first_name %> <%= @user.last_name %>' data-zip='<%= @user.zipcode %>' data-currlat='<%= @curr_user.latitude %>' data-currlng='<%= @curr_user.longitude %>'><%= @full_name %></h1>
+        <% else %>
+          <h1 class='big-text' data-latitude='<%= @user.latitude %>' data-longitude='<%= @user.longitude %>' data-user='<%= @user.first_name %> <%= @user.last_name %>' data-zip='<%= @user.zipcode %>'><%= @full_name %></h1>        
+        <% end %>  
         <h2>Located in <%= @neighborhood %></h2> 
         <h2>Primary language: <%= @user.most_common_language %></h2>
         <% if @user.email %>
@@ -16,15 +20,17 @@
             </a>
             <div class='yelp-info btn btn-color2 btn-block'> 
               <h3>Nearby Cafes with Wifi</h3>
-              <% @wifi_spots.each do |cafe| %>
-                <div class='align left'>
-                  <%= link_to cafe[0], cafe[2], target: "_blank", class: "yelp-name" %>
-                </div>
-                <div class='align-right'>
-                  <img class="yelp-image" src="<%= cafe[3] %>"  />
-                </div>  
-                <br><br>  
-              <% end %>
+              <% if @curr_user %>
+                <% @wifi_spots.each do |cafe| %>
+                  <div class='align left'>
+                    <%= link_to cafe[0], cafe[2], target: "_blank", class: "yelp-name" %>
+                  </div>
+                  <div class='align-right'>
+                    <img class="yelp-image" src="<%= cafe[3] %>"  />
+                  </div>  
+                  <br><br>  
+                <% end %>
+              <% end %>  
             </div>
           </div>
 
@@ -127,17 +133,82 @@ START MAP
 </section>  
 
 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<% if current_user && @curr_user.zipcode != @user.zipcode%>
+  <script>
 
-<script>
-  var lat = $("h1.big-text").data('latitude')
-  var lng = $("h1.big-text").data('longitude')
-  var mapPoint = {
-    'lat': lat,
-    'lng': lng,
-    'zoom' : 15,
-    'icon': '/assets/pin-dark.png'
-  };  
-</script>
+    var lat = $("h1.big-text").data('latitude')
+    var lng = $("h1.big-text").data('longitude')
+    // var zip = ''
+    var curr_user_lat = $("h1.big-text").data('currlat')
+    var curr_user_lng = $("h1.big-text").data('currlng')
+    var mapstyles = [ { "stylers": [ { "saturation": -100 } ] } ];
+    // var name = $("h1.big-text").data('user')
+    // var zip = $("h1.big-text").data('zip')
+    // var mapPoint = {
+    //   'lat': lat,
+    //   'lng': lng,
+    //   'infoText': '<h5>'+name+'</h5>',
+    //   'linkText':'Find me here!',
+    //   'mapAddress': zip,
+    //   'zoom' : 15,
+    //   'icon': '/assets/pin-dark.png'
+    // };
+
+    var directionsDisplay;
+    var directionsService = new google.maps.DirectionsService();
+    var map;
+
+    function initialize(lat, lng) {
+      directionsDisplay = new google.maps.DirectionsRenderer();
+      var current_location = new google.maps.LatLng(lat, lng);
+      var mapOptions = {
+        zoom:15,
+        center: current_location,
+        styles: mapstyles
+      };
+      map = new google.maps.Map(document.getElementById('gmap'), mapOptions);
+      directionsDisplay.setMap(map);
+    }
+
+    function calcRoute(curr_user_lat, curr_user_lng, lat, lng) {
+      var origin      = new google.maps.LatLng(curr_user_lat, curr_user_lng);
+      var destination = new google.maps.LatLng(lat, lng);
+      
+      var request = {
+          origin:      origin,
+          destination: destination,
+          travelMode:  google.maps.TravelMode.DRIVING
+      };
+      directionsService.route(request, function(response, status) {
+        if (status == google.maps.DirectionsStatus.OK) {
+          directionsDisplay.setDirections(response);
+        }
+      });
+    }
+
+    google.maps.event.addDomListener(window, 'load', calcRoute(curr_user_lat, curr_user_lng, lat, lng));
+
+    initialize(lat, lng);
+    calcRoute(curr_user_lat, curr_user_lng, lat, lng);
+  </script>
+
+<% else %>
+   <script>
+     var lat = $("h1.big-text").data('latitude')
+      var lng = $("h1.big-text").data('longitude')
+      var zip = $("h1.big-text").data('zip')
+      var name = $("h1.big-text").data('user')
+      var mapPoint = {
+        'lat': lat,
+        'lng': lng,
+        'infoText': '<h5>'+name+'</h5>',
+        'linkText':'Find me here!',
+        'mapAddress': zip,
+        'zoom' : 15,
+        'icon': '/assets/pin-dark.png'
+      };
+    </script>
+<% end %>  
 <!-- ==============================================
 END MAP 
 =============================================== -->
