add commented out custom gmap marker to user show

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,7 +44,7 @@
 
         <% elsif current_user && current_user.email.length < 1 %>
         <br>
-        <h3 class='homepage'>Input Your Email So Other Coders Know How to Get in Touch.</h3>
+        <h3 class='homepage'>Input Your Email So Other Coders Know How to Get in Touch</h3>
         <br>
          
         <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"> 
