--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,9 @@
         <% if logged_in? %>
           <li><%= link_to 'LOG OUT', logout_path %></li>
           <li>
-            <%= link_to(image_tag(current_user.image_path, class: "nav-thumbnail"), user_path(current_user))%>
+            <div class="col-sm-4 service-item color3 scrollimation scale-in">
+             <i class="fa"> <%= link_to(image_tag(current_user.image_path, class: "nav-thumbnail"), user_path(current_user))%> </i>
+            </div>
           </li>
       
         <% else %>
